# Particles

./: CMakeLists.txt
include/: app.h  particle.h  screen.h  swarm.h
src/: app.cpp  main.cpp  particle.cpp  screen.cpp  swarm.cpp
